--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif, "Playfair Display", "Inter",
+    "Italiano", "Istok Web";
   line-height: 1.5;
   font-weight: 400;
 
