--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,9 +1,10 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 520px; // 스샷 느낌. 필요하면 560~640으로 조정
+  height: 875px; // 스샷 느낌. 필요하면 560~640으로 조정
   overflow: hidden;
   background: #000;
+  padding: 150px 0;
 
   .hero-bg {
     position: absolute;
@@ -33,7 +34,7 @@
   }
 
   .hero-title {
-    font-family: "italiano", serif;
+    font-family: "Italianno";
     font-size: 130px;
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -45,7 +46,7 @@
     font-size: 30px;
     letter-spacing: 0.22em;
     opacity: 0.95;
-    font-family: "inter", sans-serif;
+    font-family: "Inter";
   }
 
   .hero-cta {
@@ -91,6 +92,7 @@
     justify-content: center;
     position: relative;
     align-items: center;
+    font-family: "Inter";
   }
 
   .deal-title {
