--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,22 +1,50 @@
 .about {
-  padding-top: var(--section-spacing);
+  padding: var(--section-spacing) 200px 0;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__item {
+    &:not(:first-child) {
+      margin-top: var(--section-spacing);
+    }
+  }
 
   &__image {
-    img {
-      width: 100%;
-      height: auto;
-      display: block;
+    width: 100%;
+    aspect-ratio: 16 / 10;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &--about {
+      background-image: url("/images/about.png");
+    }
+
+    &--community {
+      background-image: url("/images/community.png");
     }
   }
 
   &__box {
-    margin: -60px 0 0 auto;
     width: calc(100% - 32px);
     padding: 28px 24px;
     background: rgba(40, 30, 30, 0.92);
     color: #fff;
     position: relative;
-    text-align: left;
+    margin-top: -60px;
+
+    &--right {
+      margin-left: auto;
+      text-align: left;
+    }
+
+    &--left {
+      margin-right: auto;
+      text-align: right;
+    }
   }
 
   &__title {
