--- a/src/components/Careers/Careers.scss
+++ b/src/components/Careers/Careers.scss
@@ -2,16 +2,17 @@
   padding-top: var(--section-spacing);
 
   &__image {
-    img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+    width: 100%;
+    aspect-ratio: 16 / 10;
+    background-image: url("/images/career.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   &__box {
-    margin: -60px auto 0 0;
-    width: calc(100% - 32px);
+    margin: -60px 200px 0 200px;
+    width: calc(100% - 400px - 32px);
     padding: 28px 24px;
     background: rgba(40, 30, 30, 0.92);
     color: #fff;
