--- a/src/components/OurHome/OurHome.scss
+++ b/src/components/OurHome/OurHome.scss
@@ -1,12 +1,12 @@
 .ourhome {
-  padding: var(--section-spacing) 0 0;
+  padding: var(--section-spacing) 200px 0;
 
   &__title {
     font-family: var(--font-playfair);
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 20px;
-    padding: 0 16px;
+    padding: 0;
     line-height: 1.3;
     color: #000;
   }
@@ -31,7 +31,7 @@
     flex: 0 0 100%;
     width: 100%;
     scroll-snap-align: start;
-    padding: 0 16px;
+    padding: 0;
     box-sizing: border-box;
   }
 
