--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -1,5 +1,5 @@
 .sbc {
-  padding: var(--section-spacing) 16px 60px;
+  padding: var(--section-spacing) 200px 60px;
 
   &__title {
     font-family: var(--font-playfair);
@@ -20,11 +20,24 @@
     display: block;
     height: 140px;
     overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    &--dean {
+      background-image: url("/images/dean.png");
+    }
+
+    &--jolene {
+      background-image: url("/images/jolene.png");
+    }
+
+    &--crypton {
+      background-image: url("/images/crypton.png");
+    }
+
+    &--alton {
+      background-image: url("/images/alton.png");
     }
   }
 
