--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 300px;
   margin-top: 60px;
+  padding: 0 200px;
   background: url("/images/support.png") center/cover no-repeat;
   display: flex;
   align-items: center;
