--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,5 +1,7 @@
 .about {
-  padding: var(--section-spacing) 30px 0;
+  &__inner {
+    padding: var(--section-spacing) 30px 0;
+  }
 
   &__wrapper {
     display: flex;
