--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,11 +4,14 @@
   left: 0;
   right: 0;
   z-index: 100;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px 30px;
   background: #fff;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 30px;
+  }
 
   &__logo {
     width: 200px;
