--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,8 +1,12 @@
 .hero {
   position: relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
 
   &__content {
     position: relative;
