--- a/src/components/OurHome/OurHome.scss
+++ b/src/components/OurHome/OurHome.scss
@@ -1,5 +1,7 @@
 .ourhome {
-  padding: var(--section-spacing) 30px 0;
+  &__inner {
+    padding: var(--section-spacing) 30px 0;
+  }
 
   &__title {
     font-family: var(--font-playfair);
