--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -1,5 +1,7 @@
 .sbc {
-  padding: var(--section-spacing) 30px 60px;
+  &__inner {
+    padding: var(--section-spacing) 30px 60px;
+  }
 
   &__title {
     font-family: var(--font-playfair);
