--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,11 @@
 .footer {
   background: #1a1a1a;
   color: #fff;
-  padding: 48px 30px 40px;
-  text-align: center;
+
+  &__inner {
+    padding: 48px 30px 40px;
+    text-align: center;
+  }
 
   &__logo {
     width: 160px;      // 로고 비율 맞게 조절
