--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,6 +1,6 @@
 .about {
   &__inner {
-    padding: var(--section-spacing) 30px 0;
+    padding: var(--section-spacing) var(--section-padding) 0;
   }
 
   &__wrapper {
