--- a/src/components/FeatureCollection/FeatureCollection.scss
+++ b/src/components/FeatureCollection/FeatureCollection.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 40px 30px;
+    padding: 40px var(--section-padding);
     min-height: 280px;
   }
 
