--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
   color: #fff;
 
   &__inner {
-    padding: 48px 30px 40px;
+    padding: 48px var(--section-padding) 40px;
     text-align: center;
   }
 
