--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --font-istok: "Istok Web", sans-serif;
   --font-italianno: "Italianno", cursive;
   --section-spacing: 150px;
+  --section-padding: 7.6925%;
 }
 
 html {
