--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 30px;
+    padding: 16px var(--section-padding);
   }
 
   &__logo {
