--- a/src/components/ShopByStyle/ShopByStyle.scss
+++ b/src/components/ShopByStyle/ShopByStyle.scss
@@ -1,6 +1,6 @@
 .sbs {
   &__inner {
-    padding: var(--section-spacing) 30px 0;
+    padding: var(--section-spacing) var(--section-padding) 0;
   }
 
   &__title {
