--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 0 30px;
+    padding: 0 var(--section-padding);
     min-height: 300px;
   }
 
